objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Current_O_M_Provider__c</fullName>
        <label>Current O&amp;M Provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Project_System_Size__c</fullName>
        <label>Current Project System Size (w)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Stage__c</fullName>
        <description>displays current value of opportunity stage in text value - use in reporting/formulas</description>
        <formula>TEXT(StageName)</formula>
        <inlineHelpText>displays current value of opportunity stage in text value - use in reporting/formulas</inlineHelpText>
        <label>Current Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Comments__c</fullName>
        <description>Any customer comments during initial lead screening.</description>
        <label>Customer Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Consultant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>lookup to account to help record consulting company used to help win opportunity, created to help win rates with certain companies.</description>
        <inlineHelpText>consultant company utilized with this opportunity</inlineHelpText>
        <label>Customer Consultant</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Customer Consultant)</relationshipLabel>
        <relationshipName>Opportunities4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DCOGS_from_Pricing_Tool__c</fullName>
        <description>Used with RollUp Helper, pulls in the DCOG number of the most recently approved Pricing Tool</description>
        <inlineHelpText>Pulls in the EPC Total Direct COGS $ number of the most recently approved Pricing Tool</inlineHelpText>
        <label>Total Direct COGS $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DCOGsPT__c</fullName>
        <description>used with RH to pull the name of the most recently approved PT.</description>
        <label>DCOGS PT</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Dealmaker_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dealmaker Opportunity</label>
        <referenceTo>DMAPP__DM_Opportunity_Extra__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>DM_Opportunity_Extra</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DM_Status__c</fullName>
        <formula>IF (
	IsWon,
	&apos;won&apos;,
	IF(
		DMAPP__Dealmaker_Opportunity__c != null,
		IF(
		DMAPP__Dealmaker_Opportunity__r.DMAPP__Qualification_Projected__c &gt; 0,
			&apos;projected&apos;,
			&apos;possible&apos;
		) ,
		IF(
			Probability &gt; 0.7,
			&apos;projected&apos;,
			&apos;possible&apos;
		)
	)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Opportunity Details Captured&quot;, &quot;Missing: &quot;&amp;IF( ISPICKVAL( Type ,&quot;&quot;),&quot;Type, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN( TEXT(MONTH(CloseDate))) = 0, &quot;Close Date, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( Amount &lt;= 0, &quot;Amount, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( LeadSource,&quot;&quot;), &quot;Lead Source, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(NextStep)=0, &quot;Next Steps&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( ISPICKVAL(Type,&quot;&quot;), 0,25) + IF( LEN( TEXT(MONTH(CloseDate))) = 0, 0,25) + IF( Amount &lt;= 0, 0,25) + IF( ISPICKVAL( LeadSource,&quot;&quot;), 0,25)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DatePB3CompleteFormula__c</fullName>
        <description>used for Project Economic Summary fields- MIPA signed Date Process Builder</description>
        <formula>IF(AND(CONTAINS(LEFT(DatePB3Complete__c,2), &quot;/&quot;), CONTAINS(MID(DatePB3Complete__c,3,2),&quot;/&quot;)),
DATE(
    VALUE(RIGHT(DatePB3Complete__c, 4)),
    VALUE(LEFT(DatePB3Complete__c, 1)),
    VALUE(MID(DatePB3Complete__c, 3, 1))
),

IF(AND(CONTAINS(LEFT(DatePB3Complete__c,2), &quot;/&quot;), CONTAINS(MID(DatePB3Complete__c,3,3),&quot;/&quot;)),
DATE(
    VALUE(RIGHT(DatePB3Complete__c, 4)),
    VALUE(LEFT(DatePB3Complete__c, 1)),
    VALUE(MID(DatePB3Complete__c, 3, 2))
),


IF(AND(CONTAINS(RIGHT(DatePB3Complete__c,5),&quot;/&quot;), CONTAINS(LEFT(DatePB3Complete__c,2), &quot;/&quot;)), 
DATE(
    VALUE(RIGHT(DatePB3Complete__c, 4)),
    VALUE(LEFT(DatePB3Complete__c, 1)),
    VALUE(MID(DatePB3Complete__c, 3, 1))
),

IF(AND(Contains(LEFT(DatePB3Complete__c,3),&quot;/&quot;), CONTAINS(MID(DatePB3Complete__c, 4, 2), &quot;/&quot;)),
DATE(
    VALUE(RIGHT(DatePB3Complete__c, 4)),
    VALUE(LEFT(DatePB3Complete__c, 2)),
    VALUE(MID(DatePB3Complete__c, 4, 1))
),

DATE(
    VALUE(RIGHT(DatePB3Complete__c, 4)),
    VALUE(LEFT(DatePB3Complete__c, 2)),
    VALUE(MID(DatePB3Complete__c, 4, 2))
)))))</formula>
        <inlineHelpText>Date PB3 Complete or Date Project Hypothesis Approved</inlineHelpText>
        <label>Date PB3 Complete Formula</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DatePB3Complete__c</fullName>
        <description>Rollup from the CC Submittal PB3 - Used with Rollup Helper (rollup helper deactivated), updated by PB when Project Hypothesis approved.</description>
        <inlineHelpText>Date PB3 Complete or Date Project Hypothesis Approved</inlineHelpText>
        <label>Date PB3 Complete</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Budgetary_Proposal_Sent__c</fullName>
        <description>autofills via WF when Budgetary Propsoal sent checkbox is first checked off</description>
        <inlineHelpText>autofills when Budgetary Propsoal sent checkbox is first checked off</inlineHelpText>
        <label>Date Budgetary Proposal Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_LOI_Signed__c</fullName>
        <description>filled in by WF FU</description>
        <label>Date LOI Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Marketing_Qualified__c</fullName>
        <inlineHelpText>Automatically records the date the Marketing Qualified checkbox is checked. Can be manually changed by Sales Ops  and Marketing.</inlineHelpText>
        <label>Date Marketing Qualified</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_PSD_Created__c</fullName>
        <label>Date PSD Created</label>
        <summarizedField>PSD__c.CreatedDate</summarizedField>
        <summaryForeignKey>PSD__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Date_Pricing_Request_Synced__c</fullName>
        <label>Date Pricing Request Synced</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_1st_L1__c</fullName>
        <label>Date of 1st L1</label>
        <summarizedField>PSD__c.Created_Date_of_1st_Revision__c</summarizedField>
        <summaryForeignKey>PSD__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Date_of_First_Escalator_to_be_Apploed__c</fullName>
        <label>Date of First Escalator to be Apploed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_L1_Due_Date__c</fullName>
        <label>Date of L1 Due Date</label>
        <summarizedField>PSD__c.Due_Date__c</summarizedField>
        <summaryForeignKey>PSD__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Deal_Type__c</fullName>
        <label>Deal Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Acquisition</fullName>
                </value>
                <value>
                    <fullName>Greenfield</fullName>
                </value>
                <value>
                    <fullName>Rooftop WDG</fullName>
                </value>
                <value>
                    <fullName>EPC for IPP</fullName>
                </value>
                <value>
                    <fullName>EPC for UOG</fullName>
                </value>
                <value>
                    <fullName>Development for UOG</fullName>
                </value>
                <value>
                    <fullName>Joint Venture</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delivery_Date_Updated_I__c</fullName>
        <description>for updating the Inverter delivery date</description>
        <label>Inverter Delivery Date Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_Date_Updated_M__c</fullName>
        <description>for updating the Module delivery date</description>
        <label>Module Delivery Date Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_Date_Updated_R__c</fullName>
        <description>for updating the Racking delivery date</description>
        <label>Racking Delivery Date Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_Date_Updated__c</fullName>
        <label>Delivery Date Updated</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deposit__c</fullName>
        <description>This is the deposit customer will give upon signing contract.</description>
        <label>Deposit</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Design_High_Temp__c</fullName>
        <label>Design High Temp</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Design_Low_Temp__c</fullName>
        <label>Design Low Temp</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dev_Solar_Storage_Weighted_Pipeline__c</fullName>
        <formula>Weighted_Contract_Price__c + Dev_Storage_Weighted_Pipeline_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used for Dev storage opportunities</inlineHelpText>
        <label>Dev Solar + Storage Weighted Pipeline</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dev_Storage_Weighted_Pipeline_Value__c</fullName>
        <formula>ESDContractValue__c * Storage_Probability_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>ESD Contract Value * Storage Probability (Used with Storage Probability dropdown)</inlineHelpText>
        <label>Dev Storage Weighted Pipeline Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Development_Only__c</fullName>
        <label>Non Revenue Generating Project</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Development_Opportunity_Name__c</fullName>
        <label>Development Opportunity Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Development_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Development Opportunity</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Development</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities (Development Opportunity)</relationshipLabel>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Development_Oppty_URL__c</fullName>
        <inlineHelpText>rolls up from related list</inlineHelpText>
        <label>Development Oppty URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Development_Revenue__c</fullName>
        <formula>IF( 
NOT(ISBLANK(Final_EPC_W_from_Approved_Pricing_Req__c)), Final_Contract_Price__c -(Final_EPC_W_from_Approved_Pricing_Req__c * Original_Contract_System_Size__c), 

IF( 
ISBLANK(Final_EPC_W_from_Approved_Pricing_Req__c), 
Final_Contract_Price__c -( Final_EPC_W_PreLim_Approved_Pricing__c * Original_Contract_System_Size__c), 
NULL ))</formula>
        <inlineHelpText>the difference between Borrego&apos;s EPC price and what a buyer will pay for the project. Takes Final Amount - (Final epc/watt from approved pricing tool * System Size ). If there is not an approved pricing tool value the field will be blank.</inlineHelpText>
        <label>Development Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Development_Type__c</fullName>
        <label>Prospect Development</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inbound</fullName>
                </value>
                <value>
                    <fullName>Outbound</fullName>
                </value>
                <value>
                    <fullName>Project Development</fullName>
                </value>
                <value>
                    <fullName>Account Management</fullName>
                </value>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>Strategic BD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Did_Borrego_do_EPC__c</fullName>
        <inlineHelpText>is the EPC internal or external?</inlineHelpText>
        <label>Did Borrego do EPC?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Direct_Margin__c</fullName>
        <label>Direct Margin</label>
        <summarizedField>Pricing_Tool_Approval__c.Direct_Margin__c</summarizedField>
        <summaryFilterItems>
            <field>Pricing_Tool_Approval__c.Status__c</field>
            <operation>equals</operation>
            <value>Final Approval, Approval Pending, Preliminary Approval</value>
        </summaryFilterItems>
        <summaryForeignKey>Pricing_Tool_Approval__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Distance_to_3_Phase__c</fullName>
        <description>Distance in in feet from the proposed point of interconnection to the closest three-phase circuit.</description>
        <inlineHelpText>Distance in in feet from the proposed point of interconnection to the closest three-phase circuit.</inlineHelpText>
        <label>Distance to 3 Phase</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Does_project_have_safe_harbor_equipment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Does project have safe harbor equipment?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EPCCOGs__c</fullName>
        <formula>IF( RecordTypeId = &quot;012340000007n0e&quot; ,
IF(
((S_S_Direct_COGS__c)- Vertical_non_IX_Dev_COGS_assumption__c - Utility_Upgrades__c - AffiliateFee__c )&gt;1, 
((S_S_Direct_COGS__c)- Vertical_non_IX_Dev_COGS_assumption__c - AffiliateFee__c ), 0)
,
IF(
((SSDCOGswatt__c*Original_Contract_System_Size__c)- Vertical_non_IX_Dev_COGS_assumption__c  - Utility_Upgrades__c - AffiliateFee__c )&gt;1, 
((SSDCOGswatt__c*Original_Contract_System_Size__c)- Vertical_non_IX_Dev_COGS_assumption__c - Utility_Upgrades__c - AffiliateFee__c ), 0)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>[S+S Direct COGS $/w *system size - utility upgrades and affiliated fee (from last approved PR)] - Vertical non-IX Dev COGS Assumption</inlineHelpText>
        <label>EPC DCOGS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EPCDCOGS__c</fullName>
        <inlineHelpText>Existing: = sum of all EPC COGS Line items from PVBid (from Sales Budget)</inlineHelpText>
        <label>z. EPC DCOGS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EPCEntitlement__c</fullName>
        <defaultValue>5/100</defaultValue>
        <inlineHelpText>defaults to 5% but can be changed- used in EPC Revenue formula</inlineHelpText>
        <label>EPC Entitlement</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EPCFinalCompletionDate__c</fullName>
        <description>displays earliest Final Completion date of all related site for the related EPC Opportunity, used in conjunction with RH</description>
        <formula>EPC_Opportunity__r.SiteFinalCompletionDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>displays earliest Final Completion date of all related site for the related EPC Opportunity</inlineHelpText>
        <label>EPC Final Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EPCRevenue__c</fullName>
        <formula>If((EPCCOGs__c/(1-EPCEntitlement__c))&lt;1, 0, (EPCCOGs__c/(1-EPCEntitlement__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>EPC DCOGs / (1 - EPC Entitlement)</inlineHelpText>
        <label>EPC Contract Price Estimate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EPC_DCOGS_W__c</fullName>
        <formula>EPCCOGs__c / Original_Contract_System_Size__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>EPC DCOGS / System Size</inlineHelpText>
        <label>EPC DCOGS $/W</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EPC_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EPC Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities (EPC Opportunity)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EPC_Sub_Completion_Date__c</fullName>
        <formula>EPC_Opportunity__r.Site_Substantial_Completion_Date__c</formula>
        <inlineHelpText>pulls substantial completion date from EPC opportunities related Sites.   In the event of multiple Sites the earliest Date is populatd.</inlineHelpText>
        <label>EPC Sub Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EPC_Total__c</fullName>
        <label>Total Contract Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EPC_for_IPP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>used only by certain Project Developers to flag opportunities that involve IPPS</description>
        <label>EPC for IPP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ESDContractValue__c</fullName>
        <description>value of the ESD Contract</description>
        <inlineHelpText>value of the ESD Contract 
&quot;Amount&quot; field is the value of the Solar Contract 
Amount + ESD Contract + Change Orders = Final Contract Value</inlineHelpText>
        <label>Storage Contract Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ESD_Probability_BSS__c</fullName>
        <description>ESD - Based upon likelihood of Borrego winning the project</description>
        <inlineHelpText>ESD - Based upon likelihood of Borrego winning the project</inlineHelpText>
        <label>Storage Probability (BSS)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ESD_Probability_customer__c</fullName>
        <description>ESD - Based upon customer interest</description>
        <inlineHelpText>ESD - Based upon customer interest</inlineHelpText>
        <label>Storage Probability (customer)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ESD_Probability_total__c</fullName>
        <description>ESD sum of individual ESD probabilities</description>
        <formula>ESD_Probability_customer__c * ESD_Probability_viability__c *  ESD_Probability_BSS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>ESD sum of individual ESD probabilities:  customer, viability, bss</inlineHelpText>
        <label>Storage Probability (total)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ESD_Probability_viability__c</fullName>
        <description>ESD - Based upon strength of prospective project</description>
        <inlineHelpText>ESD - Based upon strength of prospective project</inlineHelpText>
        <label>Storage Probability (viability)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ESSACorDC__c</fullName>
        <description>Used for Energy Storage</description>
        <inlineHelpText>Is the current ESS design AC-Coupled or DC-Coupled?</inlineHelpText>
        <label>ESS AC or DC?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AC Coupled</fullName>
                </value>
                <value>
                    <fullName>DC Coupled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESS_Energy_kWh__c</fullName>
        <label>Storage Energy (kWh)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ESS_Power_kW__c</fullName>
        <label>Storage Power (kW)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ESU_kWh__c</fullName>
        <label>Energy Storage Unit $/kWh</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Elec_BOS_Cost__c</fullName>
        <label>Electrical BOS Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Elec_Sub_Cost__c</fullName>
        <label>Electrical Sub Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Electrical_Engineer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Electrical Engineer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Electrical Engineer)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Electrical_Plans__c</fullName>
        <label>Electrical Plans</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Sub Released</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Rate_Schedule__c</fullName>
        <label>End Rate Schedule</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engineering_Cost__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Engineering Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EntitlementPath__c</fullName>
        <inlineHelpText>Enter the path to entitlement</inlineHelpText>
        <label>Entitlement Path</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Entitlement_Rating__c</fullName>
        <label>Entitlement Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                    <default>true</default>
                    <label>Unknown</label>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>A-</fullName>
                </value>
                <value>
                    <fullName>B+</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>B-</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Entitlement_Status__c</fullName>
        <label>Entitlement Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                    <default>true</default>
                    <label>Unknown</label>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Preliminary Discussions</fullName>
                </value>
                <value>
                    <fullName>Pre-Development Meeting</fullName>
                </value>
                <value>
                    <fullName>Studies Underway</fullName>
                </value>
                <value>
                    <fullName>Application Submitted</fullName>
                </value>
                <value>
                    <fullName>Under AHJ Review</fullName>
                </value>
                <value>
                    <fullName>Hearings</fullName>
                </value>
                <value>
                    <fullName>Negotiating Permits</fullName>
                </value>
                <value>
                    <fullName>Entitled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Equipment_Cost__c</fullName>
        <label>Equipment Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Equipment_Delivery_Notes__c</fullName>
        <label>Equipment Delivery Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Equipment_Rental_Included1__c</fullName>
        <description>Uses Global Value Set - shared with Service Contract</description>
        <inlineHelpText>Determines whether equipment rentals are included as part of the contract or if they will be billable to the customer.</inlineHelpText>
        <label>Equipment Rental Included</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Equipment_Rental_Included</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Equipment_Rental_Included__c</fullName>
        <description>Determines whether equipment rentals are included as part of the contract or if they will be billable to the customer. If No, make sure to provide an explanation.</description>
        <inlineHelpText>Determines whether equipment rentals are included as part of the contract or if they will be billable to the customer. If No, make sure to provide an explanation.</inlineHelpText>
        <label>Equipment Rental Included</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Escalator_Details1__c</fullName>
        <description>uses Global Value set - shared with Service Contract</description>
        <label>Escalator Details</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Escalator_Details</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Escalator_Details__c</fullName>
        <description>NO LONGER USED REPLACED BY GLOBAL PICKLIST</description>
        <inlineHelpText>NO LONGER USED REPLACED BY GLOBAL PICKLIST</inlineHelpText>
        <label>Escalator Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Escalator__c</fullName>
        <inlineHelpText>%/year</inlineHelpText>
        <label>Lease Escalator</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Estimated_Completion_Date__c</fullName>
        <label>Estimated Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_First_Available_CC_Date__c</fullName>
        <description>For Development Opportunities this is the Estimated Date Conservation Committee Meeting</description>
        <inlineHelpText>For Development Opportunities this is the Estimated Date Conservation Committee Meeting</inlineHelpText>
        <label>Wetlands Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_First_Available_PB_Date__c</fullName>
        <description>For Development Opportunities this is the Estimated Date Planning Board Meeting</description>
        <inlineHelpText>For Development Opportunities this is the Estimated Date Planning Board Meeting</inlineHelpText>
        <label>First AHJ Meeting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Gross_Margin__c</fullName>
        <formula>Final_Contract_Price__c - Project_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Gross Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_PB3_Submission_Date__c</fullName>
        <description>For Development Opportunities this is the Estimated Date PD will submit for PB3 approval</description>
        <inlineHelpText>For Development Opportunities this is the Estimated Date PD will submit for PB3 approval</inlineHelpText>
        <label>Estimated PB3 Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Excavation_Cost__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Excavation Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Exclusions_and_Notes__c</fullName>
        <description>These are project specific exclusions and notes that you would like included in contract.</description>
        <label>Exclusions and Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Expected_Bid_Date__c</fullName>
        <label>Expected Bid Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Billing_Start_Date__c</fullName>
        <inlineHelpText>Enter the expected billing start date for the O&amp;M Contract</inlineHelpText>
        <label>Expected Billing Start Date</label>
        <type>Date</type>
    </fields>
</CustomObject>